--- a/WindowsFormsApplication3/GPS application.csproj
+++ b/WindowsFormsApplication3/GPS application.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalVariable.cs" />
+    <Compile Include="GrpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UDPListener.cs" />
